@@ -1,3 +1,6 @@
 # This file is used for 64-bit libraries.
 TMPDIR/lib*/*.so* libDESTLIBDIR
 TMPDIR/usr/lib*/gconv/*.so* usr/libDESTLIBDIR/gconv
+TMPDIR/lib/ldconfig/
+TMPDIR/lib/*-*-gnu/ lib
+TMPDIR/usr/lib/*-*-gnu/ usr/lib
