@@ -21,3 +21,7 @@ debian/tmp-libc/sbin/ldconfig sbin
 debian/tmp-libc/usr/lib/pt_chown usr/lib
 
 debian/local/usr_sbin/tzconfig usr/sbin
+
+debian/tmp-libc/lib/ldconfig/
+debian/tmp-libc/lib/*-*-gnu/ lib
+debian/tmp-libc/usr/lib/*-*-gnu/ usr/lib
