@@ -96,6 +96,8 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
       (Closes: #295855)
     - Add ldconfig-multiarch.diff (add directories pointed from /lib/ldconfig
       to the search path).
+    - Create (/usr)/lib/$(config-machine)-$(config-os) and add symlinks to
+      these directories in /lib/ldconfig/
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
